// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleTask matches snapshot 1`] = `
<div>
  <article
    class="sc-fzpans gHCdfm"
  >
    <div
      class="sc-fzplWN gwxuzL"
    >
      <div>
        <div
          class="sc-fzplWN gwxuzL"
        >
          <h5
            class="sc-fznyAO drGMcz"
          >
            Ir às compras
          </h5>
          <h6
            class="sc-fznZeY cjOYaZ"
            color="#673AB7"
          >
            Waiting for
          </h6>
        </div>
        <p
          class="sc-fznKkj ihavmM"
        >
          14 Aug
        </p>
      </div>
      <div
        class="sc-fzoyAV lmwFFU"
      />
    </div>
  </article>
</div>
`;

exports[`Tasks Page matches snapshot 1`] = `
<div>
  <div
    class="sc-fzoLag eydcJC"
  >
    <h1
      class="sc-fzoXzr MtNNd"
    >
      Tasks
    </h1>
    <div
      class="sc-fzpjYC gnMnem"
    >
      <div
        class="sc-fznxsB dsgAhn"
      >
        <div
          class="sc-fznJRM fKzpjv"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="tasks-view"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="tasks-view"
              role="button"
              tabindex="0"
            >
              Today
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="today"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
        <h3
          class="sc-fznWqX jXPxyW"
        >
          7
        </h3>
      </div>
      <div
        class="sc-fzoiQi dFUsJk"
      >
        <svg
          class="settings-icon"
        >
          settings.svg
        </svg>
        <div
          class="sc-AxjAm khxSQh"
        >
          <h2
            class="sc-AxiKw jzoYkp"
          >
            Settings
          </h2>
          <div
            class="sc-AxhCb bCDkJU"
          >
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
                for="sort-by"
              >
                Sort by
              </label>
              <div
                class="sc-AxheI hCWMTo"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="sort-by"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="sort-by"
                    role="button"
                    tabindex="0"
                  >
                    Date
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="date"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
                for="font-size"
              >
                Font size
              </label>
              <div
                class="sc-AxheI hCWMTo"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="font-size"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="font-size"
                    role="button"
                    tabindex="0"
                  >
                    Medium
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="medium"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
              >
                Categories
              </label>
              <div
                class="sc-AxmLO ceYEas"
              >
                <p
                  class="sc-fzozJi ihgPmv"
                  color="#673AB7"
                >
                  Waiting for
                </p>
                <p
                  class="sc-fzozJi gqjDvs"
                  color="#FFC107"
                >
                  House
                </p>
                <p
                  class="sc-fzozJi fKpEFM"
                  color="#FF9800"
                >
                  Trackit
                </p>
                <p
                  class="sc-fzozJi dNhvgN"
                  color="#9E9E9E"
                >
                  Stuff
                </p>
                <p
                  class="sc-fzozJi tItWo"
                  color="#E91E63"
                >
                  Personal
                </p>
                <span
                  class="sc-fzoLsD bpeBKU"
                >
                  <svg>
                    plus.svg
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-AxirZ gpexXZ"
        />
      </div>
    </div>
    <section
      class="sc-fzqARJ elDNLU"
    >
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Ir às compras
              </h5>
              <h6
                class="sc-fznZeY cjOYaZ"
                color="#673AB7"
              >
                Waiting for
              </h6>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              14 Aug
            </p>
          </div>
          <div
            class="sc-fzoyAV lmwFFU"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Dar de comer às gatas
              </h5>
              <h6
                class="sc-fznZeY ekLkIy"
                color="#FFC107"
              >
                House
              </h6>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              13 Aug
            </p>
          </div>
          <div
            class="sc-fzoyAV lmwFFU"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Entregar trabalho
              </h5>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              15 Aug
            </p>
          </div>
          <div
            class="sc-fzoyAV lmwFFU"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Fazer wireframe da App
              </h5>
              <h6
                class="sc-fznZeY gooBaK"
                color="#FF9800"
              >
                Trackit
              </h6>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              05 Aug
            </p>
          </div>
          <div
            class="sc-fzoyAV lmwFFU"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Fazer design da App
              </h5>
              <h6
                class="sc-fznZeY gooBaK"
                color="#FF9800"
              >
                Trackit
              </h6>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              06 Aug
            </p>
          </div>
          <div
            class="sc-fzoyAV lmwFFU"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Estudar React
              </h5>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              07 Aug
            </p>
          </div>
          <div
            class="sc-fzoyAV lmwFFU"
          />
        </div>
      </article>
      <article
        class="sc-fzpans gHCdfm"
      >
        <div
          class="sc-fzplWN gwxuzL"
        >
          <div>
            <div
              class="sc-fzplWN gwxuzL"
            >
              <h5
                class="sc-fznyAO drGMcz"
              >
                Esta não devia aparecer
              </h5>
            </div>
            <p
              class="sc-fznKkj ihavmM"
            >
              08 Aug
            </p>
          </div>
          <div
            class="sc-fzoyAV lmwFFU"
          />
        </div>
      </article>
    </section>
  </div>
</div>
`;

exports[`TasksSettings matches snashot 1`] = `
<div>
  <svg
    class="settings-icon"
  >
    settings.svg
  </svg>
  <div
    class="sc-AxjAm khxSQh"
  >
    <h2
      class="sc-AxiKw jzoYkp"
    >
      Settings
    </h2>
    <div
      class="sc-AxhCb bCDkJU"
    >
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
          for="sort-by"
        >
          Sort by
        </label>
        <div
          class="sc-AxheI hCWMTo"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="sort-by"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="sort-by"
              role="button"
              tabindex="0"
            >
              Date
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="date"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
          for="font-size"
        >
          Font size
        </label>
        <div
          class="sc-AxheI hCWMTo"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="font-size"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="font-size"
              role="button"
              tabindex="0"
            >
              Medium
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="medium"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
        >
          Categories
        </label>
        <div
          class="sc-AxmLO ceYEas"
        >
          <span
            class="sc-fzoLsD bpeBKU"
          >
            <svg>
              plus.svg
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-AxirZ gpexXZ"
  />
</div>
`;
